<resources>
    <string name="app_name">Alert Accident</string>
    <string name="login">Log in to Alert Accident</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign">Sign in</string>
    <string name="forget">Find your account</string>
    <string name="email_address">Email field should not be blank.</string>
    <string name="valid_address">Please enter a valid email address</string>
    <string name="valid_password">Please enter a valid password</string>
    <string name="success">Login Success</string>
    <string name="logo">mobelite</string>
    <string name="name">Name</string>
    <string name="lastname">Last Name</string>
    <string name="phone">Phone Number</string>
    <string name="signup">Sign Up</string>
    <string name="create">Create Account ?</string>
    <string name="bottom_navigation_menu_landscape">Alerts</string>
    <string name="bottom_navigation_menu_logos">Home</string>
    <string name="bottom_navigation_menu_android">Map</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="log">Account Sign up</string>
    <string name="existinguser">Already Registred?</string>
    <string name="account">Don\'t have an account?</string>
    <string name="guest">Use as a guest</string>
    <string name="noaccount">Without Account</string>
    <string name="Separater">Or</string>
    <string name="Remember">Remember me</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="load">Loading</string>
    <string name="sign_google">Sign In via Google</string>
    <string name="sign_facebook">Sign in via Facebook</string>
    <string name="submit">Submit</string>
    <string name="create_acc">Create your account</string>
    <string name="number">Phone Number</string>
    <string name="cin">CIN</string>
    <string name="username">Username</string>
    <string name="licence">Driving licence</string>
    <string name="insurance">Insurance company</string>
    <string name="address">Address</string>
    <string name="Server">Server Error</string>
    <string name="valid_user">Username field should not be blank</string>
    <string name="valid_number">Please enter a valid phone number</string>
    <string name="identical_pass">Passwords are not identical</string>
    <string name="account_creation">Account created</string>
    <string name="setting">Settings</string>
    <string name="contact">Contacts</string>
    <string name="first_aids">First Aids</string>
    <string name="logout">Log out</string>
    <string name="notification">Receive notifications</string>
    <string name="GPS">Enable GPS</string>
    <string name="accident">Enable automatic accidents detection</string>
    <string name="profile">
        <u>Update profile</u>
    </string>
    <string name="change_pass">
        <u>Change password</u>
    </string>
    <string name="desac_acc">
        <u>Desactivate Account</u>
    </string>
    <string name="new_email">Confirm your email</string>
    <string name="new_name">Enter new name</string>
    <string name="new_number">Enter new phone number</string>
    <string name="reset">Change your Password</string>
    <string name="old_pass">Current password</string>
    <string name="new_pass">Enter a new password</string>
    <string name="facebook_app_id">326457064678460</string>
    <string name="fb_login_protocol_scheme">fb326457064678460</string>
    <string name="forgot_msg">Please enter your email address to reset your password:</string>
    <string name="forgot_email">Enter your email adress</string>
    <string name="valid_CIN">Please enter a valid CIN</string>
    <string name="nopassword">Password field should not be blank.</string>
    <string name="alreadyregistred">The email address you entered is already in use</string>
    <string name="authen_error">Incorrect Email or password.Please try again.</string>
    <string name="no_account">You have to create an account before you get access to the application</string>
    <string name="no_connection">Please check your internet connection or try again later</string>
    <string name="forget_pass">Forgot password?</string>
    <string name="profile_update">Update your profile</string>
    <string name="telephone">Telephone field should not be empty.</string>
    <string name="no_name">Name field should not be empty.</string>
    <string name="latitude">LAT:</string>
    <string name="longitude">LNG:</string>
    <string name="pos">Tunisie,Tunis,\n Centre Urbain Nord</string>
    <string name="alert">Create Alert</string>
    <string name="create_alert">Create your alert</string>
    <string name="desc">Add description here</string>
    <string name="service">Service Type</string>
    <string name="spinner">Chose Service:</string>
    <string name="send_alert">Alert sent successfully</string>
    <string name="victims">Number of victims:</string>
    <string name="description">Description field should not be empty.</string>
    <string name="noservice">Service field should not be empty.</string>
    <string-array name="services">
        <item>samu</item>
        <item>police</item>
        <item>hospital</item>
        <item>emergency</item>
    </string-array>
    <string name="location">Enable Location</string>
    <string name="Gpsmsg">Your Locations Settings is set to \'Off\'.\n Please Enable Location to use this app</string>
    <string name="pos_settings">Location Settings</string>
    <string name="photo">Take a photo:</string>
    <string name="desacacc">Desactivate your account</string>
    <string name="confirmpass">Confirm your password:</string>
    <string name="desac_msg">Complete your desactivation request by entering the password associated with your
        account.
    </string>
    <string name="desactivate">Desactivate</string>
    <string name="desactivation">Your account will be desactivated</string>
    <string name="des_acc">Desactivate your account?</string>
    <string name="desac_pos">YES, DESACTIVATE</string>
    <string name="wrongpass">Password incorrect</string>
    <string name="disablegps">Disable GPS</string>
    <string name="no_internet">No internet connexion</string>
    <string name="no_internet_msg">You\'re offline,please try again later</string>
    <string name="ok">OK</string>
    <string name="video">Take a video:</string>
    <string name="list_alert">Alert List</string>
    <string name="email_alert">
        <u>Email:</u>
    </string>
    <string name="name_alert">
        <u>Name:</u>
    </string>
    <string name="service_alert">
        <u>Service alerted:</u>
    </string>
    <string name="victims_alert">
        <u>Number of victims:</u>
    </string>
    <string name="desc_alert">
        <u>Alert Description:</u>
    </string>
    <string name="check_map">
        <u>\u0020 Check on map</u>
    </string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyD9Ijcv-C4NVfZB9j3kCZKLX58NgImTTtk
    </string>
    <string name="browser_key">AIzaSyCyuJmNnafNVdx390P07u5X6JwNiZYySnI</string>
    <string name="date">Date:</string>
    <string name="accident_location">Location:</string>
    <string name="clear">Clear</string>
    <string name="save">Save changes</string>
    <string name="add">Add Contact</string>
    <string name="update">Update Contact</string>
    <string name="new_name_sub">
        <u>Enter a new name:</u>
    </string>
    <string name="new_phone_sub">
        <u>Enter a new phone number:</u>
    </string>
    <string name="deletemsg">Are you sure you want to delete this ?</string>
    <string name="contact_list">List of contacts</string>
    <string name="search">Search</string>
    <string name="no_alerts">There are no Alerts near your location</string>
    <string name="call">Call</string>
    <string name="call_button">Call Service</string>
    <string name="contact_empty">Your contact list is empty.why not start by tapping the plus to add a friend</string>
    <string name="date_details">
        <u>Date:</u>
    </string>
    <string name="accident_location_details">
        <u>Location:</u>
    </string>
    <string name="alert_details">Alert Details</string>
    <string name="aids">5 Basic First Aid Procedures</string>
    <string name="arrest">
        <u>Basic First Aid for Cardiac Arrest:</u>
    </string>
    <string name="arrest_details">Cardiopulmonary resuscitation (CPR) is the most important medical procedure of all. If
        a person is in cardiac arrest and CPR is not performed, that person will die.
    </string>
    <string name="bleeding">
        <u>Basic First Aid for Bleeding:</u>
    </string>
    <string name="bleeding_details">Regardless of how severe, almost all bleeding can be controlled. Mild bleeding will
        usually stop on its own. If severe bleeding is not controlled, it may lead to shock and eventually death.
    </string>
    <string name="burns">
        <u>Basic First Aid for Cardiac Discomfort:</u>
    </string>
    <string name="burn_details">The victim complains of a pain tightening his chest.
        The pain may radiate to other parts of the body (including the arm, shoulder, neck, lower jaw, or stomach).
        These signs may be accompanied by breathing difficulties, sweating, nausea, or even abdominal pain.
    </string>
    <string name="next">Next</string>
    <string name="step0">Command someone to call 911 or the medical alert system for the locale.</string>
    <string name="step1">Immediately start chest compressions regardless of your training. Compress hard and fast in the
        center of the chest, allowing recoil between compressions. Hand this task over to those who are trained if and
        when they arrive.
    </string>
    <string name="step2">If you are trained, use chest compressions and rescue breathing.</string>
    <string name="step3">An AED should be applied and used. But it is essential not to delay chest compressions, so
        finding one should be commanded to someone else while you are doing chest compressions.
    </string>
    <string name="intervention">Intervention Steps</string>
    <string name="previous">Previous</string>
    <string name="done">Done</string>
    <string name="step0_bleeding">Avoid, if possible, any contact with the blood of the victim: ask him to compress the
        wound himself.
    </string>
    <string name="step1_bleeding">Otherwise,Cover the wound with a gauze or a cloth and apply direct pressure to stop
        the blood flow. Don\'t remove the cloth. Add more layers if needed. The cloth will help clots form to stop the
        flow.
    </string>
    <string name="step2_bleeding">Lay the victim in a horizontal position.</string>
    <string name="step3_bleeding">Ask someone present to alert the authorities or do it yourself if you are alone.
    </string>
    <string name="step4_bleeding">If the wound continues to bleed, compress it even more firmly.Continue compression on
        the wound until help arrives.
    </string>
    <string name="step5_bleeding">Wash your hands after doing these first aid.</string>
    <string name="step0_cardiac">Ask the victim questions: how long has this discomfort lasted? Is this the first time?
        Has the victim been hospitalized or is taking medication for this?
    </string>
    <string name="step1_cardiac">Ask someone present to immediately alert the rescuers(SAMU:190) , or do it
        yourself if you are alone.
    </string>
    <string name="step2_cardiac">Rest the victim in a comfortable position (lying down or, if desired, in a semi-sitting
        or sitting position).
    </string>
    <string name="step3_cardiac">Check regularly that the victim is conscious and is breathing normally.</string>
    <string name="suffocation">
        <u>Basic First Aid for Suffocation:</u>
    </string>
</resources>