<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/settings_dest"
                android:icon="@drawable/settingsgears"
                android:title="@string/setting" />
        <item
                android:id="@+id/nav_second_fragment"
                android:icon="@drawable/contact"
                android:title="@string/contact" />
        <item
                android:id="@+id/nav_third_fragment"
                android:icon="@drawable/aids"
                android:title="@string/first_aids" />
    </group>

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/logout"
                android:icon="@drawable/logout"
                android:title="@string/logout" />
    </group>
</menu>