<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
     >

    <item
            android:id="@+id/map"
            android:enabled="true"
            android:icon="@drawable/ic_place_black_24dp"
            android:title="@string/bottom_navigation_menu_android"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/home3"
            android:enabled="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/bottom_navigation_menu_logos"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/alerts"
            android:enabled="true"
            android:icon="@drawable/ic_priority_high_black_24dp"
            android:title="@string/bottom_navigation_menu_landscape"
            app:showAsAction="ifRoom" />

</menu>