<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.example.alertaccident.ui.UserGuest">


    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Interface.MainActivity"

            android:orientation="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true" tools:ignore="UselessParent">
        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
        >

        <TextView
                android:id="@+id/login_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:textColor="@color/twitter_blue"
                android:textSize="26sp"
                android:textStyle="bold"/>


            <LinearLayout
                    android:paddingTop="10dp"
                    android:orientation="vertical"
                    android:layout_marginStart="30dp"
                     android:layout_marginEnd="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" tools:ignore="ExtraText">
                <ImageButton
                        android:id="@+id/user_profile_photo"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="25dp"
                        android:background="@drawable/user_profile_image_background"
                        android:src="@mipmap/mobelite_round" android:contentDescription="@string/logo"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:paddingTop="5dp"
                        android:textColor="@color/black"
                        android:text="@string/existinguser"/>
                <Button

                        android:id="@+id/btn_login"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="22dp"
                        android:background="@drawable/buttonshape"
                        android:text="@string/sign"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="18sp"

                       />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:paddingTop="5dp"
                        android:textColor="@color/black"
                        android:text="@string/account"/>

                <Button
                        android:id="@+id/btn_sign"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="22dp"
                        android:background="@drawable/buttonshape"
                        android:text="@string/signup"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="18sp" />


                <TextView
                        android:id="@+id/or"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingTop="5dp"
                        android:textColor="@color/black"
                        android:text="@string/Separater"/>

                <View
                        android:layout_width="300dp"
                        android:layout_gravity="center"
                        android:layout_height="1dp"

                        android:background="@color/twitter_blue"/>
                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:paddingTop="15dp"
                        android:textColor="@color/black"
                        android:text="@string/noaccount"/>
                <Button
                        android:id="@+id/btn_guest"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="22dp"
                        android:background="@drawable/buttonshape"
                        android:text="@string/guest"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="18sp"

                />


            </LinearLayout>

        </LinearLayout>
        </ScrollView>
    </RelativeLayout>


</FrameLayout>