<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".Ui.login.SignIn">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Interface.MainActivity"
            android:background="@color/white"
            android:orientation="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true" tools:ignore="UselessParent">
        <TextView
                android:id="@+id/login_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="22dp"
                android:gravity="center_horizontal"
                android:text="@string/login"
                android:textColor="@color/blue5fb0c9"
                android:textSize="26sp"
                android:textStyle="bold"/>
        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_title"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="30dp"
                android:background="@color/blue5fb0c9"
                android:orientation="vertical"
                android:padding="20dp">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:paddingTop="30dp">
                <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                            xmlns:tools="http://schemas.android.com/tools"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                >
            <LinearLayout
                    android:paddingTop="30dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" tools:ignore="ExtraText">

                <EditText
                        android:id="@+id/id_email"
                        android:hint="@string/email"
                        android:drawableTint="@color/white"
                        android:inputType="textEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_email_black_24dp"
                        tools:targetApi="m"
                        tools:ignore="Autofill"/>


                <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                        android:id="@+id/id_password"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:singleLine="true"
                        android:drawableTint="@color/white"
                        android:drawableStart="@drawable/ic_lock_black_24dp"
                        app:drawable_show="@drawable/ic_visibility_black_24dp"
                        app:drawable_hide="@drawable/ic_visibility_off_black_24dp"
                        android:padding="8dp"
                        tools:targetApi="m"/>
                <CheckBox android:id="@+id/checkbox_meat"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/Remember"
                />


                <Button
                        android:id="@+id/btn_login"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="22dp"

                        android:background="@color/yellow_d67601"
                        android:text="@string/sign"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="18sp"

                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/forget" />
                <TextView
                        android:id="@+id/or"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingTop="5dp"
                        android:text="@string/Separater"/>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"/>
                />
                <Button
                        android:id="@+id/btn_login_fb"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="22dp"

                        android:background="@color/yellow_d67601"
                        android:text="@string/sign"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="18sp"

                />
                <Button
                        android:id="@+id/btn_login_google"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="22dp"

                        android:background="@color/yellow_d67601"
                        android:text="@string/sign"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="18sp"

                />

            </LinearLayout>
                </ScrollView>
            </LinearLayout>
        </RelativeLayout>
        <ImageButton
                android:id="@+id/user_profile_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@+id/login_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:background="@drawable/user_profile_image_background"
                android:src="@mipmap/mobelite_round" android:contentDescription="@string/logo"/>
    </RelativeLayout>


</FrameLayout>